# raylib-template

./: .gitignore  CMakeLists.txt
configs/: app.plist  app.rc
src/: main.c  main.cpp  types.hpp
